# mauricio_lg_embarcatech_hbr_2025

./: .gitignore  .gitmodules  LICENSE  README.md
projects/contador_decrescente/: CMakeLists.txt  README.md  contador_decrescente.c
projects/exemplo_unity_test/: .gitignore  CMakeLists.txt  exemplo_unity_test.c
projects/galton_board/: README.md
projects/galton_board/src/: CMakeLists.txt  galton_board.c
projects/ler_joystick/: CMakeLists.txt  README.md  ler_joystick.c
projects/modelo_arquitetura_modular/: CMakeLists.txt
projects/modelo_arquitetura_modular/app/: main.c
projects/modelo_arquitetura_modular/drivers/: led_embutido.c
projects/modelo_arquitetura_modular/hal/: hal_led.c
projects/modelo_arquitetura_modular/include/: hal_led.h  led_embutido.h
projects/rastreador_notas_musicais/: README.md
projects/rastreador_notas_musicais/src/: rastreador_notas.c  servidor_cloud.py
projects/rastreador_notas_musicais/src/inc/: notas_fifo.c  notas_fifo.h
projects/rastreador_notas_musicais/src/templates/: index.html
projects/sintetizador_audio/: CMakeLists.txt  README.md  main.c  sintetizador_audio.c
projects/temperatura_interna/: CMakeLists.txt  README.md  temperatura_interna.c
